--- a/document/cosyne.tex
+++ b/document/cosyne.tex
@@ -57,7 +57,9 @@
 \date{}
 \maketitle
 
-\textbf{Summary}. Sequence disambiguation in an associative neural network with meta-stable sequential attractors and learning capabilities is investigated. We present a neural network that is capable of both learning and correctly recall sequences with the associative Bayesian Confidence Propagation Neural Network (BCPNN)  learning rule through the use of synaptic z-traces. The problem of sequence disambiguation is parameterized in this work by the number of previous states required for the network to correctly disambiguate between two competing possibilities. The network disambiguation power is discussed here in terms of its dynamical and structure parameters. The sensitivity of the system to noise under various regimes is also tested. 
+
+
+\textbf{Summary}. In this work we study the problem of sequence disambiguation in an associative neural network with meta-stable attractor states. The network is capable of encoding sequences with the associative Bayesian Confidence Propagation Neural Network (BCPNN) learning rule through the use of synaptic z-traces. The problem of sequence disambiguation is parameterized by the the overlap in activation between two competing sequences. The sensitivity of the system to noise under various regimes is systematically tested. The network robustly differentiates between considerably overlapping sequences. The performance is non-monotonically modulated by the time constant of synaptic traces and a range for optimal disambiguation is shown as a function of noise level. 
 
 \textbf{Central question.} The disambiguation of sequences with overlaping states of activity using contextual information is a long standing problem in systems neuroscience \cite{levy1996sequence} (see Fig. \ref{fig:results}A-B for examples of sequence disambiguation). Although different neural mechanisms have been proposed in computational modeling, they suffer from either poor disambiguation capabilities, high computational overhead or excessive suceptibility to noise. Following previous work \cite{tully2016spike, lansner2009associative} we propose here an extension of the attractor memory model that learns the sequential structure of the input through the associative BCPNN learning rule and examine its disambiguation capabilities.
 
@@ -66,7 +68,7 @@
 %Attractors neural networks provide a computational theory of memory that has proven itself both fruitful and powerful \cite{lansner2009associative}. Early attemps  \cite{amit1992modeling} of using . 
 
 %Our rate based attractor \cite{tully2016spike} \cite{lansner2009associative} network model builds in the spike model to encode the sequential structure model of the input through the associative BCPNN learning rule that exploits synaptic traces. 
-\textbf{Approach}. The topological structure of the network is presented in Fig. \ref{fig:model}A. Recurrent connectivity tends to fix patterns of activation in place whereas feed-forward connectivity coupled with adaptation dynamics together with competition initiate pattern transition (meta-stable attractor states). The dynamics of the network are described in detail by the rate-model in Eq. \ref{eq:dynamics} which contains an adaptation term and binary activation units whose sequential dynamics we illustrate in top of Fig. \ref{fig:results}B. The short term dynamical history of the system is preserved in the z-filters (shown in Fig. \ref{fig:model}B, middle) which are low-passed versions of the activation characterized by a time constant $\tau_z$. The z-filters are responsible for both unit activation through the current and learning. Learning works by accumulating evidence of independent and correlated activity of unit activation ($\vec{p}$ and $\mathbf{P}$ respectively) and weighting them against each other to calculate the connectivity matrix as show in Eq. \ref{eq:learning}. The sequential binding of attractors in accomplished by the z-traces (Fig.\ref{fig:model}C) where contiguously active units developed excitatory connectivity between themselves. 
+\textbf{Approach}. The topological structure of the network is presented in Fig. \ref{fig:model}A. Recurrent connectivity tends to fix patterns of activation in place whereas feed-forward connectivity coupled with adaptation dynamics together with competition initiate pattern transition (meta-stable attractor states). The dynamics of the network are described in detail by the rate-model in Eq. \ref{eq:dynamics} which contains an adaptation term and binary activation units whose sequential dynamics we illustrate in top of Fig. \ref{fig:results}B. The short term dynamical history of the system is preserved in the z-filters (shown in Fig. \ref{fig:model}B, middle) which are low-passed versions of the activation characterized by a time constant $\tau_z$. The z-filters are responsible for both unit activation through the current and learning. Learning works by accumulating evidence of independent and correlated activity of unit activation ($\vec{p}$ and $\mathbf{P}$ respectively) and weighting them against each other to calculate the connectivity matrix as show in Eq. \ref{eq:learning}. The sequential binding of attractors is accomplished by the z-traces (Fig.\ref{fig:model}C) leading to excitatory connectivity  between  contiguously active units. 
 
 
 \begin{figure}[H]
